# TDS_data_acquisition

./: README.md  TDS.py  calibration.py  pid.py  pyproject.toml  requirements.txt  siglent.py  tds_experiment.py
files/: 304 Resistivity curve literature.xlsx  316_Resistivity_curve_literature.xlsx  Mo Resistivity curve literature.xlsx  TDS.ui  config.json  config.toml  tds.py
tds_control/: app.py  calibration.py  config_io.py  paths.py  siglent.py  tds_experiment.py
